2003-10-16  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-sasl-kerberos4.c: Fixed a #include.

2003-10-10  Not Zed  <NotZed@Ximian.com>

	* providers/local/camel-local-provider.c: set the url fragment
	flag for local providers.

	* camel-provider.h: Move the URL_PART_NEED bits to the high 16
	bits, to allow for easier changes in the future.  Added a
	URL_PART_FRAGMENT flag for providers that use fragment = folder
	path.

2003-10-09  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-mime-utils.c (header_decode_date): Allow timezone offsets
	to be up to 14 hours ahead of UTC. Fixes bug #49357.

	* broken-date-parser.c (get_tzone): Same.

2003-10-08  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/smtp/camel-smtp-transport.c (smtp_helo): Removed an
	unused variable.

2003-09-25  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/smtp/camel-smtp-transport.c (smtp_helo): If the
	localhost lookup results in a numeric IPv6 host, use the form
	"[IPv6:<addr>]" as specified in rfc2821. Fixes bug #46006.

2003-09-23  Ettore Perazzoli  <ettore@ximian.com>

	* providers/local/camel-local-provider.c: Set the IS_STORAGE bit
	in the mbox provider, since it can now contain a hierarchy of
	folders.

2003-09-23  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/local/camel-mbox-store.c (get_folder): If the CREATE
	flag is set and the parent .sbd directory does not exist, create
	it.

	* camel-mime-utils.c (append_8bit): Don't forget to flush the
	iconv conversion.

	* tests/message/test4.c (main): Don't try dot-files.

2003-09-22  Not Zed  <NotZed@Ximian.com>

	** See bug #41610
	
	* providers/pop3/camel-pop3-folder.c (cmd_tocache): protect a
	divide by 0 for 0 length messages.

2003-09-22  Not Zed  <NotZed@Ximian.com>

	* providers/imap/camel-imap-provider.c: Added "offline_sync"
	option, which lets you synchronise all mail to local storage
	automagically.

	* camel-disco-folder.c (cdf_folder_changed): hook onto the folder