@@ -1,3 +1,8 @@
+2003-10-15  Not Zed  <NotZed@Ximian.com>
+
+	* camel-store.c (camel_folder_info_build): Fix so we output the
+	tree in sorted depth-first order, rather in reverse.
+
 2003-10-16  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* camel-sasl-kerberos4.c: Fixed a #include.
